--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 tensorflow==2.12.1
-keras==2.12.0
-matplotlib==3.2.2
-imutils
 opencv-python
 h5py
+flask
+flask-socketio
+opencv-python-headless
+pillow
+eventlet
